# DiscourseKG

./: .cursorrules  .gitignore  Makefile  README.md  __init__.py  pyproject.toml
.cursor/rules/: architecture.mdc  elegance.mdc  testing.mdc
archives/: agent_logger.py  analyze_agent_logs.py  browser_tools_ai_v1.py  browser_tools_ai_v2.py  browser_tools_v3.py  scraper_v2.py  scraper_v3.py
documentation/: BRD.md  architecture.md
documentation/kg/: topology.md
flows/: categorize_flow.py  discover_flow.py  discovery_flow.py  extract_flow.py  filter_flow.py  graph_flow.py  preprocessing_flow.py  processing_flow.py  scrape_flow.py  summarize_flow.py  tasks.py
pipeline/: categorizer.py  config.py  pipeline_state.py  preprocessing_pipeline.py  summarizer.py
playground/: debug_openai_quota.py  full_pipeline_test_results.json  read_rollcall_transcript.ipynb  test_categorization.py  test_centralized_config.py  test_clean_structure.ipynb  test_configurable_stages.py  test_content_categorizer.py  test_dataclass_stages.py  test_discover_flow.py  test_end_to_end_pipeline.ipynb  test_endpoint_refactoring.ipynb  test_explore.ipynb  test_extractive_summarizer.py  test_full_pipeline.py  test_next_stage.py  test_persistence_back.ipynb  test_pipeline_state.py  test_prefect_flows.ipynb  test_prefect_structure.ipynb  test_refactored_architecture.ipynb  test_reorganized_structure.ipynb  test_simple_cells.py  test_simple_stages.py  test_single_flow_execution.ipynb  test_token_summarizer.py  test_updated_schema.py  test_updated_summarizer.py  test_v11.py  test_v13.py
playground/browser_tools_v11/: agent.py  callbacks.py  core.py  tools.py
playground/browser_tools_v12/: agent.py  callbacks.py  core.py  test_v12.py  test_v12_step_by_step.ipynb
playground/browser_tools_v13/: agent.py  agent_flow.md  crawler.py  date_utils.py  date_voter.py  logger.py  models.py  prompts.py
scripts/: run_pipeline.py  setup_env.py  setup_env.sh  update_architecture.py
src/: app_config.py  config.py  pipeline_config.py  schemas.py
src/categorize/: __init__.py  categorize_endpoint.py  categorizer.py  config.py  content_categorizer.py  models.py  pipeline.py
src/collect/: scrape_endpoint.py
src/discover/: config.py  discover_endpoint.py  discoverer.py  models.py  pipeline.py
src/discovery/: discovery_agent.py  discovery_endpoint.py  pipeline.py
src/extract/: config.py  extract_endpoint.py  extractor.py  models.py  pipeline.py
src/filter/: config.py  filter_endpoint.py  filterer.py  models.py  pipeline.py
src/graph/: __init__.py  config.py  graph_endpoint.py  grapher.py  loader.py  models.py  neo4j_loader.py  pipeline.py  preprocessor.py
src/preprocessing/: __init__.py  extractive_summarizer.py  summarize_endpoint.py
src/processing/: pipeline.py  (+2 more)
tasks/: data_loaders.py  orchestration.py  persistence.py  stage_processors.py  tasks.py
tests/: mock_scrape_flow.py  test_transcript_generator.py  transcript_generator.py  transcript_templates.json
(+63 files in other folders)
