[project]
name = "discourse-kg"
version = "0.1.0"
dependencies = [
    "python-dotenv>=1.0.0",
    "neo4j>=5.17.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.8.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "prefect>=3.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "crewai[tools]>=0.11.0",
    "crewai-tools>=0.2.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "selectolax>=0.3.0",
    "markdownify>=0.11.0",
    "pyprojroot>=0.2.0",
    "tqdm>=4.64.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0.0",
    "firecrawl-py>=4.9.0",
    "crawl4ai>=0.3.0",
    "nest-asyncio>=1.5.0",
    "dateparser>=1.1.0",
    "datefinder>=0.7.3",
    "python-dateutil>=2.8.0",
    "urlextract>=1.8.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "readability-lxml>=0.8.1",
    "soupsieve>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools]
packages = { find = {} }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
