[project]
name = "discourse-kg"
version = "0.1.0"
dependencies = [
    "python-dotenv>=1.0.0",
    "neo4j>=5.17.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.8.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "prefect>=3.0.0",
    "instructor>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pyprojroot>=0.2.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0.0",
    "crawl4ai>=0.3.0",
    "rich>=13.0.0",
    "adblock>=0.6.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "peewee>=3.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "types-peewee>=3.18.0",
]

[tool.setuptools]
packages = { find = {} }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
